<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/BGColor">

    <TextView
        android:id="@+id/register_tv_app_name"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/BGColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/register_et_username"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="412dp"
        android:backgroundTint="@color/White"
        android:drawableRight="@android:drawable/sym_action_email"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_app_name" />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="271dp"
        android:backgroundTint="@color/White"
        android:drawableRight="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_username"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="127dp"
        android:background="@drawable/button"
        android:text="@string/register_btn_name"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_password" />

</android.support.constraint.ConstraintLayout>